feat backend: add account and location api routes
